--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:D4ueJgj8RfEPo33sDw4kiKbIp09RY056VZ6dYyqw0YM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE="demo1.q-auth.com"
+DB_USERNAME="demositeuser"
+DB_PASSWORD="Kimch000!"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,11 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp10.gmoserver.jp
+MAIL_PORT=587
+MAIL_USERNAME=info@white-net.co.jp
+MAIL_PASSWORD=admin911
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=info@white-net.co.jp
+MAIL_FROM_NAME='Q-Auth Support Center'
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
