--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,20 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+// ---------------------- This Site User Define Env Variable --------------------
+// 会社コード
+COMPANY_CD = 479434d83d128ee9
+
+// 認証サーバ関連
+AUTH_BASEURL = "https://d.q-auth.com"
+GETDEVID_URL = "${AUTH_BASEURL}/getDevID"
+STOPDEVID_URL = "${AUTH_BASEURL}/StopDevID"
+DELSTOPDEVID_URL = "${AUTH_BASEURL}/delStopDevID"
+CHANGEDEVID_URL = "${AUTH_BASEURL}/insChangeList"
+GETCHANGEDEVIDLIST_URL = "${AUTH_BASEURL}/getChangeList"
+
+// QRコードチェックタイム
+MAX_WAIT_TIME = 15
+// 現時点からX秒前の変化データを取得（Schedule間隔によって指定秒を調整）
+CHANGE_DEVID_GET_GAP = 20
